init read_priority data structure for int

--- a/ud923/problem_set_1/Makefile
+++ b/ud923/problem_set_1/Makefile
@@ -1,7 +1,10 @@
 CC=gcc
 
-all:
-	$(CC) -c main main.c -pthread
+all: read_priority_int.o
+	$(CC) -c main main.c read_priority_int.o
+
+read_priority_int.o:
+	$(CC) -c read_priority_int.h -o read_priority_int.o -pthread
 
 clean:
-	rm -rf *.o main
+	rm -rf *.o *.h.gch main
